[tool.poetry]
name = "marketview"
version = "1.0.0"
description = "Market View"
authors = ["Baptiste Gaillard <baptiste.gaillard@gmail.com>"]

# Show outdated packages: poetry show -o

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
structlog = "^21.1.0"
python-dotenv = "^0.19.0"
pydantic = "^1.8.1"
requests = "^2.28.1"
yfinance = "^0.1.74"
matplotlib = "^3.5.2"
pandas-stubs = "^1.4.3"
XlsxWriter = "^3.0.3"
click = "^8.1.3"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = "^5.5"
flake8 = "^3.8.4"
mypy = "^0.971"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
isort = "^5.9.2"
pydocstyle = "^5.1.1"
colorama = "^0.4.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.scripts]
serve = "marketview.api:start"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-class-docstring,missing-function-docstring,missing-module-docstring,redefined-builtin,redefined-outer-name,unused-argument"
